Moved background color styling to playlist container to prevent white background color on small contents

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -63,6 +63,7 @@ nav
 #playlist
   position: relative
   height: calc(100vh - 212px)
+  background-color: $secondary
   .container-fluid
     height: inherit
     .swiper-container 
